1.0.0 to 1.1.0
----------------------------------------------------------------------
- Fixed a small bug with wildcards in eventconf.xml
- Added a "clear" attribute to the acknowledge tag for notifications,
  so now the "up" can be ack'd along with the "down". Bug 544
- Added a "title" to categories to reflect the last update. Bug 517
- Fixed the AM/PM in the Performance Report drop down. Bug 515
- Fixed some typos and bad URLs in error messages. Bug 662
- Changed all references to Hashtable (deprecated) to HashMap
- Fixed multipart message mistake. Bug 591
- Added the ability to associate events in eventconf.xml with 
  specific parameters (varbinds). Bug 626
- Modified eventconf.xml to allow for event definition files to be
  included using the <event-file> tag.
- Added a Threshold Rearm event for both Low and High Thresholds.
- Added an Admin GUI page for deleting nodes. Bug 602
- Added the ability to select which non-IP interfaces would be 
  scheduled for data collection, and built an Admin WebUI page
  to configure it. Bug 616
- Loopback interfaces will now be discovered, and are preferred
  as the Primary SNMP interface. Applies to non-127.*.*.*
  interfaces only.
- fixed issue with capsd pulling all of the ifTable for interface.
  Could cause issues with some HP switches.
- Bug 664: Notifications not filtering on services.
- Bug 666: Generic SNMP Traps are hard-coded and cannot be 
  managed via eventconf.xml. This fix also included a change
  that fixes and enforces the order of events in eventconf.xml.
  Care must be taken so that the most specific mask matches are
  listed  before more generic ones. But this fix insures that the
  correct wildcards and exact matches work as ordered.
- Fixed a NullPointer exception when deleting a node due to a
  poller downtime model.
- fixed bug with Admin/Oper status types causing exception
- removed duplicate listings for LDAP and Citrix in capsd config
- fixed bug with rescans on certain devices (net-snmp on MACOSX)