@@ -7,7 +7,8 @@
         service-id-sql="SELECT serviceID from service where serviceName = ?"
         outstanding-notices-sql="SELECT notifyid FROM notifications where notifyId = ? AND respondTime is not null"
         acknowledge-id-sql="SELECT notifyid FROM notifications WHERE eventuei=? AND nodeid=? AND interfaceid=? AND serviceid=?"
-        acknowledge-update-sql="UPDATE notifications SET answeredby=?, respondtime=? WHERE notifyId=?">
+        acknowledge-update-sql="UPDATE notifications SET answeredby=?, respondtime=? WHERE notifyId=?"
+	match-all="false">
         
 	<auto-acknowledge uei="http://uei.opennms.org/products/bluebird/nodes/serviceResponsive" 
                           acknowledge="http://uei.opennms.org/products/bluebird/nodes/serviceUnresponsive">
